# d-transfert-backend

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .gitmodules  Dockerfile  IMPLEMENTATION_STATUS.md  PRODUCTION_READINESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0118c9af488b_add_wallet_id_to_transfers.py  012c10ff7436_phase3_wallets_and_movements.py  1d2b3bca5059_phase6_entries.py  1f3d2b8a7c44_rename_platform_super_admin_matricule.py  2b802e2505d4_add_status_to_proofs.py  38bacc5a0669_add_exchange_rate_to_national_operations.py  469143998093_reference_format_per_company_daily_.py  4ae3bbf04179_add_settles_debt_to_payments.py  4d416d475de8_initial_empty_migration.py  534f4ad3c025_phase8_payments.py  5a5893ceeb22_phase10_audit_logs_and_notifications.py  6a2a7e6c1f11_seed_platform_super_admin.py  6fc808082003_add_target_currency_to_transfers.py  71c451ee1b4c_add_currency_to_client_balance_.py  7ad4b4f19fbe_add_password_changed_at_and_revoked_.py  84ddfbfe8744_add_require_company_approval_to_.py  9242c0f4ae52_phase5_collaborations_and_rates.py  9c101344d01f_add_proofs_table.py  9e821a48c523_phase2_companies_users_roles_permissions.py  a127642fd303_phase4_national_operations.py  b7adc6877932_phase7_transfers_and_collaborator_.py  c42c18998f51_add_operation_type_to_private_sending_.py  d6e2f4a8c901_add_user_matricule_for_login.py  fe6d7ee8b52b_phase12_admin_platform.py  (+2 more)
app/: main.py
scripts/: db_backup.sh  db_restore.sh  seed_demo.py  seed_super_admin.py
(+154 files in other folders)
